bk_ida/gccida/g0/get_last_value
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value/src/combine.c:11985:35: error: use of undeclared identifier 'machine_mode'
return gen_lowpart_for_combine( ( machine_mode)*( ( unsigned __int8 *)x + 2), value); 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value/src/obj/combine.o] Error 1
